<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:padding="20dp"
    android:id="@+id/main_srl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/main_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="라씨 매매비서"
                android:fontFamily="@font/noto_sans_cjk_kr_bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/main_tv_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="자문사 버전"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:gravity="center"
                android:padding="14dp"
                app:layout_constraintTop_toBottomOf="@+id/main_tv_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_cl_invest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/main_tv_sub_title">

                <TextView
                    android:id="@+id/main_tv_invest_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_user_invest_title"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/main_tv_invest_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_more"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_cl_invest_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/main_cl_invest_title"
                android:background="@drawable/boundary_square_default_white"
                android:padding="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/main_tv_invest_user_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="유저 투자정보 대표제목"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/main_tv_invest_user_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv_invest_user_contents"/>

                <TextView
                    android:id="@+id/main_tv_invest_user_contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="유저 투자정보 내용 \n ㅇㅇㅇ \n ㅇㄷㅇ"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_tv_invest_user_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/main_ly_invest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/main_cl_invest_middle"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_cl_pfo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/main_ly_invest">

                <TextView
                    android:id="@+id/main_tv_pfo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_pfo_title"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/main_tv_pfo_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_more"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_cl_pfo_middle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/main_cl_pfo_title"
                android:background="@drawable/boundary_square_default_white"
                android:padding="10dp"
                android:layout_marginTop="10dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/main_pfo_vp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_cl_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/main_cl_pfo_middle">

                <TextView
                    android:id="@+id/main_tv_issue_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_issue_title"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/main_tv_issue_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_issue_count"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <HorizontalScrollView
                android:id="@+id/main_issue_hs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/main_cl_issue">

                <LinearLayout
                    android:id="@+id/main_issue_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>